covers fix bg

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -11,7 +11,7 @@
   justify-content: center;
   position: relative;
   background-color: var(--covers-bg);
-  background-image: url(./img/optima/covers_back.png);
+  background-image: url(../img/optima/covers_back.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -96,7 +96,8 @@
   }
 
   .covers-container {
-    max-width: 1440px;
+    width: 1440px;
+    max-width: 100%;
     height: 960px;
   }
 
